[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7.7", features = ["io-util", "codec"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
bytes = "1.4.0"
anyhow = "1.0.69"
futures = "0.3.26"
